# proc-macro-workshop

./: Cargo.toml
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
builder/: Cargo.toml
builder/src/: lib.rs  main.rs
debug/: Cargo.toml
debug/src/: lib.rs  main.rs
seq/: Cargo.toml
seq/src/: lib.rs  main.rs
sorted/: Cargo.toml
sorted/src/: lib.rs  main.rs
